<resources>
    <string name="app_name">Onov</string>
    <string name="bugly_app_id">b0cdd2e446454bdca42b3cc0b3b83417</string>
    <string name="default_notification_channel_id">com.Onov</string>
    <string name="title_home">Home</string>
    <string name="title_rooms">Rooms</string>
    <string name="title_me">Me</string>
    <string name="permission_not_granted">Necessary permissions not granted</string>
    <string name="stripe_publishable_key">pk_test_51K7DgkCqEZCeL0aJqIG6IlKvuxg1HAY0OBDIR8mlzJ1hEPw94X0WSjkloVavG1V0mc6Xa4sFGR0D7XZOxhNdMYJf00TBWfzH0M</string>
    <string name="payments_show_name" translatable="false">Successfully received payment data for %s!</string>
    <string name="home_category_title_multi">Multi Hosts</string>
    <string name="start_Debate">Start Debate</string>
    <string name="home_category_title_single">Solo Host</string>
    <string name="home_category_title_pk">PK Host-in</string>
    <string name="home_category_title_virtual_host">Virtual Host</string>
    <string name="home_category_title_ecommerce">Live Shopping</string>
    <string name="home_category_desp_multi">Invite others to co-host in broadcasting channel</string>
    <string name="invite_multi">Invite others to join Debate</string>
    <string name="home_category_desp_single">Live streaming by single host</string>
    <string name="home_category_desp_pk">Merge streams from 2 channels for broadcasting</string>
    <string name="home_category_desp_virtual_host">Avatar-based simulation for call or broadcasting</string>
    <string name="home_category_desp_ecommerce">Engage audience and other hosts in online shopping</string>
    <string name="room_list_no_data_hint">Please Create a Room</string>
    <string name="room_list_fail_to_obtain_data_hint">Loading Data failed, please try later</string>
    <string name="room_list_network_error_title">Network failure</string>
    <string name="room_list_network_error_message">The network connection is not available, please try later.</string>
    <string name="profile_item_title_avatar">Profile</string>
    <string name="profile_item_title_nickname">Name</string>
    <string name="modify_user_title">Edit Name</string>
    <string name="about_title">About</string>
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="privacy_website_link">https://www.agora.io/en/privacy-policy/</string>
    <string name="terms_service_title">Terms of Services</string>
    <string name="terms_service_link">https://www.agora.io/en/terms-of-service/</string>
    <string name="disclaimer_title">Test Product Disclaimer</string>
    <string name="disclaimer_content">&#160;&#160;&#160;&#160;Agora Live ("this product") is a test product provided by Agora. Agora enjoys the copyright and ownership of this product. It is hereby granted free of charge to anyone who obtains a copy of this product and related documentation (hereinafter referred to as "software") to try the software without limitation, including but not limited to trial, copy, modify, merge, publish, distribute, but this product shall not be used For any commercial use, you may not sublicense and/or sell copies of the software.\n\n &#160;&#160;&#160;&#160;This product is provided "as is" without any express warranty, including but not limited to guarantees of suitability, suitability for specific purposes, and non-infringement. Whether it is due to any contract, infringement or other forms of conduct related to this product or the trial of this product or other methods, Agora will not be responsible for any claims, damages or other liabilities.\n\n &#160;&#160;&#160;&#160;You are free to choose whether to try the services provided by this product. If you download, install, or try the services provided in this product, it means that you trust the owner of the product, and Agora shall not be responsible for any form of loss or injury caused by yourself or others when you try the services provided in this product for any reason.</string>
    <string name="sign_up_agora_title">Sign Up Agora.io</string>
    <string name="sign_up_website_link">https://sso.agora.io/en/signup</string>
    <string name="version_title">Versions</string>
    <string name="agoralive_version_title">AgoraLive Version</string>
    <string name="agoralive_release_time_title">Release</string>
    <string name="agoralive_release_time" translatable="false">2021.07.12</string>
    <string name="agoralive_media_sdk_version_title">Media SDK Version</string>
    <string name="agoralive_media_sdk_version">Ver 3.0.1.1</string>
    <string name="live_prepare_hint">Channel Name</string>
    <string name="go_live_text">Go Live</string>
    <string name="live_prepare_name_too_long_toast_format">Room name cannot be longer than %d characters</string>
    <string name="live_prepare_no_room_name">Please enter your room name</string>
    <string name="no_fu_auth_notice">No FaceUnity authentication found</string>
    <string name="live_bottom_edit_hint">Say something &#8230;</string>
    <string name="live_send_empty_message">Empty messages are not sent</string>
    <string name="live_host_in_room_name_hint">Channel&#160;&#160;</string>
    <string name="live_host_in_seat_state_open_audience">Become Host</string>
    <string name="live_host_in_seat_state_open_host">Invite Host</string>
    <string name="live_host_in_seat_state_blocked">Blocked</string>
    <string name="live_system_notification_member_joined">has joined</string>
    <string name="live_system_notification_member_left">has left</string>
    <string-array name="live_host_in_seat_operations">
        <item>Mute</item>
        <item>Unmute</item>
        <item>Leave</item>
        <item>Open</item>
        <item>close</item>
    </string-array>
    <string name="live_virtual_image_select_title">Select Image</string>
    <string name="live_virtual_image_select_confirm">Confirm</string>
    <string name="live_virtual_image_invite">Invite</string>
    <string name="live_virtual_image_stop_invite">Leave</string>
    <string name="live_virtual_image_stop_invite_message">Do you want to leave the chat?</string>
    <string name="live_pk_host_remaining_time_hint">PK left:</string>
    <string name="product_detail_buy_now">Buy Now</string>
    <string name="product_promote_title">抢 9 期免息券</string>
    <string name="product_promote_date">6.11 - 6.18</string>
    <string name="product_promote_actual_price_title">到手价</string>
    <string name="product_promote_actual_price">6599</string>
    <string name="product_default_description">Apple iPad Pro 11英寸平板电脑 2020年新款(256G WLAN版/全面屏/A12Z/FaceID/MXDC2CH/A) 深空灰色</string>
    <string name="product_name_1">Lipstick</string>
    <string name="product_name_2">Rucksack</string>
    <string name="product_name_3">iPad</string>
    <string name="product_name_4">Pants</string>
    <string name="product_desp_1">Revlon Super Lustrous Lipstick, High Impact Lipcolor</string>
    <string name="product_desp_2">Keepall 55 Monogram Eclipse Canvas M40605</string>
    <string name="product_desp_3">New Apple iPad Pro (12.9-inch, Wi-Fi, 128GB) - Silver </string>
    <string name="product_desp_4">Men\'s K87 Workwear Pocket Short Sleeve T-Shirt </string>
    <string name="live_message_gift_send">has sent out</string>
    <string name="live_room_setting_action_sheet_title">Setting</string>
    <string name="live_room_setting_title_resolution">Resolution</string>
    <string name="live_room_setting_title_framerate">Frame Rate</string>
    <string name="live_room_setting_title_bitrate">Bitrate</string>
    <string name="live_room_setting_bitrate_value_format" translatable="false">%d kbps</string>
    <string name="live_room_setting_bitrate_value_default">Default</string>
    <string name="live_room_beauty_action_sheet_title">Beauty</string>
    <string name="live_room_beauty_action_sheet_blur">Blur</string>
    <string name="live_room_beauty_action_sheet_color">Brighten</string>
    <string name="live_room_beauty_action_sheet_cheek_thinning">Thinning</string>
    <string name="live_room_beauty_action_sheet_eye_enlarge">Eye</string>
    <string name="live_room_bg_music_action_sheet_title">Background Music</string>
    <string name="live_room_bg_music_action_sheet_credit_hint">Music:&#160;&#160;</string>
    <string name="live_room_bg_music_action_sheet_credit_link">https://www.bensound.com</string>
    <string name="live_room_gift_action_sheet_title">Presents</string>
    <string name="live_room_gift_action_sheet_send">Send</string>
    <string name="live_room_gift_action_sheet_value_format">(%d Coins)</string>
    <string name="live_room_pk_room_list_title_format">Room List (%d)</string>
    <string-array name="gift_names">
        <item>Bell</item>
        <item>Ice Cream</item>
        <item>Wine</item>
        <item>Cake</item>
        <item>Ring</item>
        <item>Watch</item>
        <item>Diamond</item>
        <item>Rocket</item>
    </string-array>
    <string name="live_room_gift_channel_message">has sent %s a gift</string>
    <string name="live_room_tool_action_sheet_title">Tool</string>
    <string-array name="live_room_action_sheet_tool_names">
        <item>Data</item>
        <item>Speaker</item>
        <item>EarMonitor</item>
        <item>Setting</item>
        <item>Rotate</item>
        <item>Camera</item>
    </string-array>
    <string name="live_room_tool_action_sheet_title_setting">setting</string>
    <string name="live_room_tool_action_sheet_title_data">Data</string>
    <string name="live_room_tool_action_sheet_title_beauty">Beauty</string>
    <string name="live_room_tool_action_sheet_title_music">Music</string>
    <string name="live_room_tool_action_sheet_title_rotate">Rotate</string>
    <string name="live_room_tool_action_sheet_title_camera">Camera</string>
    <string name="live_room_tool_action_sheet_title_speaker">Speaker</string>
    <string name="live_room_tool_action_sheet_title_inear">EarMonitor</string>
    <string name="live_room_tool_action_sheet_title_apply">Apply</string>
    <string name="live_room_voice_action_sheet_title">Voice</string>
    <string name="live_room_voice_action_sheet_headphone">Headphone</string>
    <string name="live_room_voice_action_sheet_loudspeaker">Loudspeaker</string>
    <string name="live_room_voice_action_sheet_others">Others</string>
    <string name="live_room_host_in_invite_user_list_action_sheet_title">Invite</string>
    <string name="live_room_all_online_user_action_sheet_title">Member Listing</string>
    <string name="live_room_host_in_audience_apply_title">Apply</string>
    <string name="live_room_host_in_audience_apply_message">Do you want to apply to be a host?</string>
    <string name="live_room_host_in_audience_apply_owner_message">"%s" want to apply seat %d, do you accept？</string>
    <string name="description">Description</string>
    <string name="post">Post</string>
    <string name="law_title">Title</string>
    <string name="donations">Donations</string>
    <string name="amount">Amount</string>
    <string name="received_from">Received From</string>
    <string name="no_donations_yet">No Donations Yet</string>
    <string name="date">Date</string>
    <string name="request">Request Debate</string>
    <string name="message">Message</string>
    <string name="time">Time</string>
    <string name="debate_title">Debate Title</string>
    <string name="no_stats_yet">No Stats Yet</string>
    <string name="votes">Votes</string>
    <string name="total_losses">total Losses</string>
    <string name="total_wins">Total Wins</string>
    <string name="stats">Stats</string>
    <string name="state">State</string>
    <string name="all_winners">All Winners</string>
    <string name="user">User</string>
    <string name="rank">Rank</string>
    <string name="no_winners_yet">No Winner Yet</string>
    <string name="overall">Overall</string>
    <string name="local">Local</string>
    <string name="national">National</string>
</resources>