<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".activities.politicians.RequestDebateActivity">

    <include layout="@layout/action_bar_layout_2"
        android:id="@+id/ab"/>


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/rdTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createPostLayout"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/debate_title"
        android:padding="15dp"
        android:textColor="@color/navigation_color"
        android:textColorHint="@color/navigation_color" />

    <View
        android:id="@+id/vShadowTwo"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:alpha="0.4"
        android:layout_below="@+id/etPostTitle"
        android:background="@color/edit_text_background" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:id="@+id/rd_date"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/poppins_regular"
        android:textSize="@dimen/_13ssp"
        android:onClick="onClick"
        android:textColor="@color/navigation_color"
        android:text="@string/date" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:textSize="@dimen/_13ssp"
        android:onClick="onClick"
        android:id="@+id/rd_time"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/navigation_color"
        android:text="@string/time" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etDebateMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createPostLayout"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/message"
        android:padding="15dp"
        android:textColor="@color/navigation_color"
        android:textColorHint="@color/navigation_color" />
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:gravity="center"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="60dp"
        android:layout_gravity="center"
        android:text="@string/request"
        android:onClick="onClick"
        android:id="@+id/requestDebateBtn"
        android:textAllCaps="false"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/white"
        android:background="@drawable/drawable_gradient_button_background"
        />

</androidx.appcompat.widget.LinearLayoutCompat>