<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.common.StatsActivity">

    <include
        android:id="@+id/ab"
        layout="@layout/action_bar_layout" />

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ab"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/stats"
        android:textColor="@color/black"
        android:textSize="18sp" />
      <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
          android:id="@+id/rl"
          android:layout_below="@+id/tv"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/drawable_chat_background">

          <TextView
              android:id="@+id/tv_"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:fontFamily="@font/poppins_regular"
              android:text="@string/total_wins"
              android:textColor="@color/black"
              android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:text="34"
            android:textSize="16sp"
            android:layout_toEndOf="@+id/tv_"
            android:layout_marginStart="40dp"
            android:id="@+id/totalWin"
            android:textColor="@color/navigation_color"
            android:fontFamily="@font/poppins_medium"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/total_losses"
            android:id="@+id/tv2"
            android:layout_marginTop="10dp"
            android:layout_below="@id/totalWin"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_regular"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:text="12"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/tv_"
            android:id="@+id/totalLose"
            android:layout_below="@+id/totalWin"
            android:layout_marginStart="40dp"
            android:textColor="@color/navigation_color"
            android:fontFamily="@font/poppins_medium"
            android:layout_height="wrap_content"/>



      </RelativeLayout>



    <TextView
        android:id="@+id/tv1"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/debate_title"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_bold"
        android:text="Result"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/votes"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_stats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv1"
        android:layout_marginTop="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


    <TextView
        android:id="@+id/noStatsData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/no_stats_yet"
        android:textColor="@color/text_blue"
        android:textSize="18sp"
        android:visibility="gone" />


</RelativeLayout>