<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragments.DonationsFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/donations"
        android:id="@+id/tv"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <RelativeLayout
        android:id="@+id/noDonationLayout"
        android:layout_width="match_parent"
        android:layout_below="@+id/tv"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/no_donations_yet"
            android:textColor="@color/app_color"
            android:textSize="18sp" />

    </RelativeLayout>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:id="@+id/text"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_below="@+id/tv"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:weightSum="3">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_weight="1.2"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/received_from"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_weight="0.9"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="@string/amount"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_weight="0.9"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_donations_fragment"
        android:layout_width="match_parent"
        android:layout_above="@+id/btnCreateDonation"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/text"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/rv_donations" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        android:text="@string/create_donations"
        android:id="@+id/btnCreateDonation"
        android:background="@drawable/drawable_gradient_button_background"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>