<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.politicians.CreateLawActivity">

    <include layout="@layout/action_bar_layout_2" />


    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="10sp"
        android:layout_marginTop="10sp"
        android:text="@string/post"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:fontFamily="@font/poppins_medium"
        android:background="@drawable/drawable_gradient_button_background"
        android:layout_height="36dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etLawTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createPostLayout"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:fontFamily="@font/poppins"
        android:hint="@string/law_title"
        android:padding="15dp"
        android:textColor="@color/navigation_color"
        android:textColorHint="@color/navigation_color" />

    <View
        android:id="@+id/vShadowTwo"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:alpha="0.3"
        android:layout_below="@+id/etPostTitle"
        android:background="@color/edit_text_background" />

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createPostLayout"
        android:background="@null"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins"
        android:hint="@string/description"
        android:padding="15dp"
        android:textColor="@color/navigation_color"
        android:textColorHint="@color/navigation_color" />


</androidx.appcompat.widget.LinearLayoutCompat>